Adds 1½ to playback-rate.

--- a/html/pages/settings.html
+++ b/html/pages/settings.html
@@ -83,14 +83,18 @@
           <label class="gatrack" for="playback-rate-3" aria-label="Normalt">
             <span style="font-size:16px"><b>1</b></span>
           </label>
+				  <input type="radio" name="playback-rate" id="playback-rate-4" value="1.25"/>
+          <label class="gatrack" for="playback-rate-4" aria-label="Lidt hurtigere">
+            <span style="font-size:16px"><b>1&#189;</b></span>
+          </label>
 
-				  <input type="radio" name="playback-rate" id="playback-rate-4" value="1.5"/>
-          <label class="gatrack" for="playback-rate-4" aria-label="Hurtigere">
+				  <input type="radio" name="playback-rate" id="playback-rate-5" value="1.5"/>
+          <label class="gatrack" for="playback-rate-5" aria-label="Hurtigere">
             <span style="font-size:16px">2</span>
           </label>
 
-				  <input type="radio" name="playback-rate" id="playback-rate-5" value="2"/>
-          <label class="gatrack" for="playback-rate-5" aria-label="Hurtigst">
+				  <input type="radio" name="playback-rate" id="playback-rate-6" value="2"/>
+          <label class="gatrack" for="playback-rate-6" aria-label="Hurtigst">
             <span style="font-size:16px">3</span>
           </label>
 			  </fieldset>
