Start porting of LYT.render.content to angular

--- a/web/app/index.html
+++ b/web/app/index.html
@@ -100,6 +100,7 @@
         <script src="scripts/services/bookservice.js"></script>
         <script src="scripts/controllers/error.js"></script>
         <script src="scripts/directives/display-errors.js"></script>
+        <script src="scripts/directives/bookcontent.js"></script>
         <!-- endbuild -->
 </body>
 </html>
