--- a/web/app/index.html
+++ b/web/app/index.html
@@ -71,6 +71,7 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-xml/angular-xml.js"></script>
     <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
+    <script src="bower_components/ngScrollTo/ng-scrollto.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
