Ionic: Load bookshelf

--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -56,12 +56,11 @@
     <script src="js/filters/sec2time.js"></script>
   </head>
   <body ng-app="lyt3App">
-    <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title"></h1>
-      </ion-header-bar>
-      <ion-content>
-      </ion-content>
-    </ion-pane>
+    <ion-nav-bar class="bar-stable">
+      <ion-nav-back-button>
+      </ion-nav-back-button>
+    </ion-nav-bar>
+
+    <ion-nav-view></ion-nav-view>
   </body>
 </html>
