--- a/web/app/index.html
+++ b/web/app/index.html
@@ -48,6 +48,7 @@
     </script>
 
     <!-- build:js(.) scripts/vendor.js -->
+
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
@@ -76,6 +77,7 @@
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
+        <script src="scripts/URI.js"></script>
         <script src="scripts/lytbridge.js"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/services/dodp.js"></script>
