--- a/web/app/index.html
+++ b/web/app/index.html
@@ -50,6 +50,8 @@
     <!-- build:js(.) scripts/vendor.js -->
 
     <!-- bower:js -->
+    <script src="scripts/nativescript-webview-interface.js"></script>
+    <script src="scripts/URI.js"></script>
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/affix.js"></script>
@@ -77,7 +79,6 @@
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="scripts/URI.js"></script>
         <script src="scripts/lytbridge.js"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/services/dodp.js"></script>
